[tool.poetry]
name = "console-poker"
version = "0.1.0"
description = ""
authors = ["Carson Schmidt <https://github.com/carsonschmidty>"]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
